# DERIBIT-TRADING-SYSTEM

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  benchmarking.md  optimization.md  performance.md  usage.md
include/: config.hpp
src/: main.cpp
src/deribit_api/: client.cpp
src/market_data/: server.cpp
src/order_manager/: manager.cpp
tests/: test_main.cpp
